createNewEntities modifications